Fixed modal overflow scrollbar and background scroll (#598)
* Removed modal scroll bar

Changed overflow-y:scroll to overflow-y:auto to remove scrollbar when not needed

* Fixed background scroll on model

--- a/src/App.scss
+++ b/src/App.scss
@@ -1806,7 +1806,7 @@ footer {
     background: #fff;
     width: 30rem;
     height: 40rem;
-    overflow-y: scroll;
+    overflow-y: auto;
     svg {
       width: 20px;
       stroke: $pblue-mid;
